--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,10 @@ cryptography==41.0.3
 defusedxml==0.7.1
 Django==4.2.4
 django-allauth==0.54.0
-django-cors-headers==4.2.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 idna==3.4
-mysqlclient==2.2.0
 oauthlib==3.2.2
-Pillow==10.0.0
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
@@ -20,5 +18,4 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
 typing_extensions==4.7.1
-tzdata==2023.3
 urllib3==2.0.4
