--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,12 +30,16 @@ jobs:
       run: |
         python manage.py test
 
+    - name: Create mutsa.zip
+      run: |
+        zip -r mutsa.zip ./*
+
     - name: Upload to S3
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
-        aws s3 cp . s3://mutsa-s3-bucket/ --recursive --exclude "*" --include "mutsa.zip"
+        aws s3 cp mutsa.zip s3://mutsa-s3-bucket/
 
     - name: Deploy to AWS CodeDeploy
       env:
