--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,12 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y awscli
 
+    - name: Configure AWS CLI
+      run: |
+        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws configure set region ap-northeast-2
+
     - name: Create mutsa.zip
       run: |
         zip -r mutsa.zip ./*
@@ -44,6 +50,7 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
+        set -x
         aws s3 cp mutsa.zip s3://mutsa-s3-bucket/
 
     - name: Deploy to AWS CodeDeploy
